# teste

./: .gitignore  AGENTS.md  ASSUMPTIONS.md  AUDIT.md  BACKTEST.md  CHECKLIST.md  CLAUDE.md  GRAVEYARD.md  HYPOTHESIS_TREE.md  IMPLEMENTATION.md  LIGHTNING_SEARCH_PROTOCOL.md  NODE_LOG.md  README.md  README_AGENTIC_PILOT.md  ROADMAP_ESTRATEGIAS_V2_METODOLOGICO.md  SEARCH_STATE.md  SPEC.md  STATE.md  VALIDATION.md  codex.md  pyproject.toml
.claude/: settings.json
agentic/: README.md
backend/: .env.example  requirements.txt
configs/: README.md
data/: datasets.yaml
decisions/: 0001-foundational-stack-and-architecture.md  0002-anti-lookahead-as-infrastructure.md  0003-validation-walk-forward-and-monte-carlo.md  0004-minimal-risk-policy.md  0005-dataset-versioning-and-manifest.md  0006-minimal-execution-cost-model.md  0007-minimal-backtest-metrics.md  0008-first-real-strategy-ma-crossover.md  0009-first-real-dataset-binance-vision.md  0010-cost-monotonicity-property-test.md  0011-donchian-breakout-strategy.md  0012-donchian-cost-monotonicity-property-test.md  0012-ma-crossover-short-side.md  0013-donchian-short-side.md  0014-systematic-cost-stress.md  0015-validation-report-persistence.md  0016-validation-cli-subcommand.md  0017-run-metadata-persistence.md  0018-validation-compare-subcommand.md  0019-synthetic-spread-cost-component.md  0020-agentic-overlay-import.md  0021-ci-agentic-workflow.md  0022-regimes-minimal-filter.md  0023-composite-regime-filter.md  0024-ranking-contract.md  0025-hybrid-release-criterion.md  0026-bollinger-mean-reversion-strategy.md  0027-rsi-mean-reversion-strategy.md  0028-bollinger-width-regime-deploy-approval.md  0029-eth-2025h1-deploy-approval.md  0030-manifest-runtime-faithful-contract.md  0031-manifest-json-schema.md  0032-bollinger-num-std-sensitivity-sweep-bk.md  0033-bollinger-window-sensitivity-sweep-bn.md  (+201 more)
(+1260 files in other folders)
