[project]
name = "alpha-forge"
version = "0.0.0"
description = "Laboratório de pesquisa, backtest rigoroso, validação estatística e ranking de estratégias de trading cripto com alavancagem até 10x."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Alpha Forge" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "vectorbt>=0.26",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "plotly>=5.22",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1.370",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.scripts]
alpha-forge = "alpha_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_forge"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "N",
    "TID",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "notebooks", "results", "data"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marca testes lentos (integração, grid search pequeno)",
    "property: marca testes property-based (hypothesis)",
]
